--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         .navbar-left {
             display: flex;
             align-items: center;
+            gap: 15px;
+            position: relative;
         }
 
         /* Phần bên phải của thanh điều hướng */
@@ -42,13 +44,15 @@
         /* Icon Home */
         .lucide-house {
             font-size: 1.5rem;
-            color: #00ff00; /* Màu xanh lá */
+            color: #ff0000; /* Màu đỏ cho nút Home */
+            cursor: pointer;
         }
 
-        /* Các icon khác */
-        .lucide-book, .lucide-smartphone, .lucide-computer {
+        /* Icon Executor */
+        .lucide-book {
             font-size: 1.5rem;
-            color: #00ff00; /* Màu xanh lá */
+            color: #00ff00; /* Màu xanh lá cho nút Executor */
+            cursor: pointer;
         }
 
         /* Home tag */
@@ -58,16 +62,41 @@
             padding: 5px 10px;
             border-radius: 5px;
             font-weight: bold;
+            cursor: pointer;
         }
 
-        /* Dropdown menu */
+        /* Dropdown menu cho Home */
+        .dropdown-home {
+            display: none; /* Ẩn dropdown khi chưa được nhấn */
+            flex-direction: column;
+            gap: 5px;
+            position: absolute;
+            top: 40px;
+            left: 0; /* Đặt dropdown bên dưới nút Home */
+            background-color: #555;
+            padding: 10px;
+            border: 1px solid #000;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+            transform: translateY(-10px); /* Bắt đầu từ phía trên */
+        }
+
+        /* Hiển thị dropdown với animation */
+        .dropdown-home.show {
+            display: flex;
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* Dropdown menu cho Executor */
         .dropdown {
             display: none; /* Ẩn dropdown khi chưa được nhấn */
             flex-direction: column;
             gap: 5px;
             position: absolute;
             top: 40px;
-            right: 0;
+            left: 0; /* Đặt dropdown bên dưới nút Executor */
             background-color: #555;
             padding: 10px;
             border: 1px solid #000;
@@ -119,11 +148,16 @@
 <body>
     <div class="navbar">
         <div class="navbar-left">
-            <div class="lucide lucide-house"></div>
+            <div class="lucide lucide-house" id="homeDropdownToggle"></div>
+            <div class="home-tag" id="homeDropdownToggleText">Home</div>
+            <div class="dropdown-home" id="homeDropdownMenu">
+                <button class="dropdown-item">Android</button>
+                <button class="dropdown-item">IOS</button>
+                <button class="dropdown-item">PC</button>
+            </div>
         </div>
         <div class="navbar-right">
             <div class="lucide lucide-book" id="dropdownToggle"></div>
-            <div class="home-tag">Home</div>
             <div class="dropdown" id="dropdownMenu">
                 <button class="dropdown-item">
                     <div class="lucide lucide-smartphone"></div>
@@ -145,7 +179,20 @@
     </div>
 
     <script>
-        // JavaScript để bật tắt dropdown với animation
+        // JavaScript để bật tắt dropdown với animation cho Home
+        const homeDropdownToggle = document.getElementById('homeDropdownToggle');
+        const homeDropdownToggleText = document.getElementById('homeDropdownToggleText');
+        const homeDropdownMenu = document.getElementById('homeDropdownMenu');
+
+        homeDropdownToggle.addEventListener('click', () => {
+            homeDropdownMenu.classList.toggle('show');
+        });
+
+        homeDropdownToggleText.addEventListener('click', () => {
+            homeDropdownMenu.classList.toggle('show');
+        });
+
+        // JavaScript để bật tắt dropdown với animation cho Executor
         const dropdownToggle = document.getElementById('dropdownToggle');
         const dropdownMenu = document.getElementById('dropdownMenu');
 
