--- a/fluxusfake.html
+++ b/fluxusfake.html
@@ -34,7 +34,7 @@
 
         // Create an image
         let img = document.createElement('img');
-        img.src = 'https://cdn.discordapp.com/attachments/1243969033557246024/1259906922019164253/AhvJNNR.png?ex=66dc7d42&is=66db2bc2&hm=1e60e0bee3d30ab72f3c65c9357687b7beab0b40121a1fe507827002ce852b73'; // Replace with your image URL
+        img.src = 'https://seekcat0.github.io/seekcat.jpg'; // Replace with your image URL
         img.style.width = '80px';  // Adjust image size
         img.style.height = '80px';
         img.style.marginBottom = '20px';
